# Sci-Collab-Net

./: .env  .env.example  .gitignore  Makefile  README.md  pyproject.toml  sqlite3.db
docker/python/: start-web.sh
src/apps/accounts/: apps.py  managers.py  mixins.py  urls.py
src/apps/accounts/admin/: user.py
src/apps/accounts/migrations/: 0001_initial.py  0002_rename_clientprofile_userprofile.py  0003_userprofile_description.py  0004_userprofile_categories.py  0005_alter_userprofile_categories.py  0006_alter_userprofile_categories.py  0007_user_otp.py
src/apps/accounts/models/: user.py
src/apps/accounts/serializers/: __init__.py  forgot_password.py  registration.py  user.py
src/apps/accounts/views/: __init__.py  forgot_password.py  registration.py  user.py
src/apps/gallery/: admin.py  apps.py  serializers.py  urls.py  utils.py  views.py
src/apps/gallery/migrations/: 0001_initial.py
src/apps/gallery/models/: __init__.py  models.py  signals.py
src/apps/handbook/: admin.py  apps.py  models.py  urls.py
src/apps/handbook/migrations/: 0001_initial.py  0002_alter_category_image_alter_category_parent.py  0003_remove_category_image.py  0004_favorites_chat.py  0005_alter_chat_options.py  0006_remove_chat_from_user_remove_chat_message_and_more.py
src/apps/post_info/: admin.py  apps.py  models.py  urls.py
src/apps/project/: admin.py  apps.py  models.py  urls.py
src/config/: urls.py
src/config/settings/: auth.py  base.py  cors.py  swagger.py
src/utils/: del_migartions.py  functions.py
src/utils/base/: models.py  views.py
(+33 files in other folders)
